P14C-13253: Fix badge z-index

--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -684,7 +684,7 @@ button.tile-button {
         top: 0;
         left: 0;
         right: 0;
-        z-index: 1000;
+        z-index: $zindex__nav--primary;
 
         &-left {
             position: absolute;
